cmake_minimum_required(VERSION 4.0)
project(CodeTantra)

set(CMAKE_CXX_STANDARD 20)

add_executable(CodeTantra main.cpp
        "DSA/Array Module/1-1-7.c"
        "DSA/Array Module/1-1-16.c"
        "DSA/Array Module/1-1-15.c"
        "DSA/Array Module/1-1-14.c"
        "DSA/Array Module/1-1-13.c"
        "DSA/Array Module/1-1-12.c"
        "DSA/Array Module/1-1-11.c"
        "DSA/Array Module/1-1-10.c"
        "DSA/Array Module/1-1-9.c"
        "DSA/Array Module/1-1-8.c"
        "DSA/Array Module/1-1-6.c"
        "DSA/Array Module/1-1-5.c"
        "DSA/Array Module/1-1-4.c"
        "DSA/Array Module/1-1-3.c"
        "DSA/Array Module/1-1-2.c"
        "DSA/Array Module/1-1-1.c"
        "DSA/Linked List Module/2-1-1.c"
        "DSA/Linked List Module/2-1-2.c"
        "DSA/Linked List Module/2-1-3.c"
        "DSA/Linked List Module/2-1-12.c"
        "DSA/Linked List Module/2-1-11.c"
        "DSA/Linked List Module/2-1-10.c"
        "DSA/Linked List Module/2-1-4.c"
        "DSA/Linked List Module/2-1-5.c"
        "DSA/Linked List Module/2-1-6.c"
        "DSA/Linked List Module/2-1-7.c"
        "DSA/Linked List Module/2-1-8.c"
        "DSA/Linked List Module/2-1-9.c"
        OS/1_Lab4/1.1.1.c
        OS/3_Lab6/3.1.16.c
        OS/3_Lab6/3.1.14.c
        OS/3_Lab6/3.1.13.c
        OS/3_Lab6/3.1.15.c
        OS/3_Lab6/3.1.17.c
        OS/3_Lab6/3.1.18.c
        OS/3_Lab6/3.1.11.c
        OS/3_Lab6/3.1.19.c
        OS/3_Lab6/3.1.20.c
        OS/3_Lab6/3.1.12.c
        OS/3_Lab6/3.1.1.c
        OS/3_Lab6/3.1.2.c
        OS/3_Lab6/3.1.3.c
        OS/3_Lab6/3.1.4.c
        OS/3_Lab6/3.1.5.c
        OS/3_Lab6/3.1.6.c
        OS/3_Lab6/3.1.7.c
        OS/3_Lab6/3.1.8.c
        OS/3_Lab6/3.1.9.c
        OS/3_Lab6/3.1.10.c
        OS/2_Lab5/2.1.1.c
        OS/2_Lab5/2.1.2.c
        OS/2_Lab5/2.1.3.c)
